@@ -192,6 +192,11 @@ class Knowledgeroot_Content {
     }
 
     public function getContent() {
+	if(Knowledgeroot_Registry::isRegistered('Knowledgeroot_Content_Parser')) {
+	    $parser = Knowledgeroot_Registry::get('Knowledgeroot_Content_Parser');
+	    return $parser->parse($this->content);
+	}
+
 	return $this->content;
     }
 
