@@ -1,0 +1,7 @@
+<?php
+
+/**
+ *
+ */
+abstract class Knowledgeroot_Content_Parser_Abstract implements Knowledgeroot_Content_Parser_Interface {
+}
