@@ -1,0 +1,8 @@
+<?php
+
+/**
+ *
+ */
+interface Knowledgeroot_Content_Parser_Interface {
+    public function parse($content);
+}
