@@ -1,3 +1,6 @@
+20121226 - fhabermann
+* added Knowledgeroot_Content_Parser
+
 20121219 - fhabermann
 * upgraded to jquery 1.8.3
 * upgraded to dojo 1.8.2
